--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -14,6 +14,12 @@
     gap: 20px;
     text-align: center;
 }
+#arrowSchop{
+    margin-top: 150px;
+    border-radius: 50%;
+    background: white;
+    padding: 10px;
+}
 #herschteller_sort {
     text-align: center;
     background: var(--text-color-primary);
