--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
@@ -6,13 +6,54 @@
         <div class="row">
             <div class="col-md-4 mt-2 p-2">
                 <img src="@Url.Content("~/compression/basi.webp")" alt="Basi" height="50" width="50" />
+                <div style="margin-top:20px">
+                    @foreach (var t in Model.Basi)
+                    {
+                        <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
+                        <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
+                            <div class="modal-dialog modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title">@t.NameSysteam</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                    </div>
+                                    <div class="modal-body">
+
+                                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
+                                            <div class="row g-0">
+                                               @*  <div class="col-md-2">
+                                                    @foreach (var d in t.ProductGalery)
+                                                    {
+                                                        <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
+                                                    }
+                                                </div> *@
+                                                <div class="col-md-8">
+                                                    <div class="card-body">
+
+                                                        <div class="card-text" style="color:black">
+                                                            @Html.Raw(t.DesctiptionsSysteam)
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    }
+                </div>
             </div>
             <div class="col-md-4 mt-2 p-2">
                 <img src="@Url.Content("~/Image/logo_ces.svg")" alt="CES" height="50" width="50" />
                 <br />
                 <div style="margin-top:20px">
 
-                   @*  @foreach (var t in  Model.SystemCes)
+                    @foreach (var t in  Model.SystemCes)
                     {
                     <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
 
@@ -28,10 +69,10 @@
                     <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
                     <div class="row g-0">
                     <div class="col-md-2">
-                    @foreach(var d in t.ProductGalery)
+                    @* @foreach(var d in t.ProductGalery)
                     {
-                    <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="...">
-                    }
+                          <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
+                    } *@
                     </div>
                     <div class="col-md-8">
                     <div class="card-body">
@@ -51,58 +92,99 @@
                     </div>
                     </div>
 
-                    }  *@
+                    }  
                 </div>
             </div>
             <div class="col-md-4 mt-2 p-2">
                 <img src="@Url.Content("~/compression/ABUS.svg.webp")" alt="ABUS" height="50" width="100" />
                 <div style="margin-top:20px">
 
-                 @*    @foreach (var t in Model.ABUS)
+                    @foreach (var t in Model.ABUS)
                     {
-                    <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
+                        <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
 
-                    <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
-                    <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                    <h1 class="modal-title">@t.NameSysteam</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                    </div>
-                    <div class="modal-body">
+                        <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
+                            <div class="modal-dialog modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title">@t.NameSysteam</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                    </div>
+                                    <div class="modal-body">
 
-                    <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
-                    <div class="row g-0">
-                    <div class="col-md-2">
-                    @foreach (var d in t.ProductGalery)
-                    {
-                    <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="...">
-                    }
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
+                                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
+                                            <div class="row g-0">
+                                                <div class="col-md-2">
+                                                    @* @foreach(var d in t.ProductGalery)
+                                                {
+                                                <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
+                                                } *@
+                                                </div>
+                                                <div class="col-md-8">
+                                                    <div class="card-body">
 
-                    <div class="card-text" style="color:black">
-                    @Html.Raw(t.DesctiptionsSysteam)
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-
-                    }  *@
+                                                        <div class="card-text" style="color:black">
+                                                            @Html.Raw(t.DesctiptionsSysteam)
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }  
                 </div>
             </div>
 
             <div class="col-md-4 mt-2 p-2">
                 <img src="@Url.Content("~/compression/EVVA.webp")" alt="EVVA" height="50" width="100" />
+                <div style="margin-top:20px">
+
+                    @foreach (var t in Model.EVVA)
+                    {
+                        <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
+
+                        <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
+                            <div class="modal-dialog modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title">@t.NameSysteam</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                    </div>
+                                    <div class="modal-body">
+
+                                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
+                                            <div class="row g-0">
+                                                <div class="col-md-2">
+                                                    @* @foreach(var d in t.ProductGalery)
+                                                {
+                                                <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
+                                                } *@
+                                                </div>
+                                                <div class="col-md-8">
+                                                    <div class="card-body">
+
+                                                        <div class="card-text" style="color:black">
+                                                            @Html.Raw(t.DesctiptionsSysteam)
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
             </div>
 
         </div>
