--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
@@ -9,42 +9,7 @@
                 <div style="margin-top:20px">
                     @foreach (var t in Model.Basi)
                     {
-                        <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
-                        <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
-                            <div class="modal-dialog modal-xl">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title">@t.NameSysteam</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                                    </div>
-                                    <div class="modal-body">
-
-                                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
-                                            <div class="row g-0">
-                                               @*  <div class="col-md-2">
-                                                    @foreach (var d in t.ProductGalery)
-                                                    {
-                                                        <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
-                                                    }
-                                                </div> *@
-                                                <div class="col-md-8">
-                                                    <div class="card-body">
-
-                                                        <div class="card-text" style="color:black">
-                                                            @Html.Raw(t.DesctiptionsSysteam)
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
+                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }
                 </div>
             </div>
@@ -52,91 +17,18 @@
                 <img src="@Url.Content("~/Image/logo_ces.svg")" alt="CES" height="50" width="50" />
                 <br />
                 <div style="margin-top:20px">
-
                     @foreach (var t in  Model.SystemCes)
                     {
-                    <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
-
-                    <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
-                    <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                    <h1 class="modal-title">@t.NameSysteam</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                    </div>
-                    <div class="modal-body">
-
-                    <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
-                    <div class="row g-0">
-                    <div class="col-md-2">
-                    @* @foreach(var d in t.ProductGalery)
-                    {
-                          <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
-                    } *@
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-
-                    <div class="card-text" style="color:black">
-                    @Html.Raw(t.DesctiptionsSysteam)
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
-
+                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }  
                 </div>
             </div>
             <div class="col-md-4 mt-2 p-2">
                 <img src="@Url.Content("~/compression/ABUS.svg.webp")" alt="ABUS" height="50" width="100" />
                 <div style="margin-top:20px">
-
                     @foreach (var t in Model.ABUS)
                     {
-                        <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
-
-                        <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
-                            <div class="modal-dialog modal-xl">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title">@t.NameSysteam</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                                    </div>
-                                    <div class="modal-body">
-
-                                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
-                                            <div class="row g-0">
-                                                <div class="col-md-2">
-                                                    @* @foreach(var d in t.ProductGalery)
-                                                {
-                                                <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
-                                                } *@
-                                                </div>
-                                                <div class="col-md-8">
-                                                    <div class="card-body">
-
-                                                        <div class="card-text" style="color:black">
-                                                            @Html.Raw(t.DesctiptionsSysteam)
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }  
                 </div>
             </div>
@@ -147,48 +39,107 @@
 
                     @foreach (var t in Model.EVVA)
                     {
-                        <li><a data-bs-toggle="modal" data-bs-target="#@t.NameSysteam">@t.NameSysteam</a></li>
+                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
 
-                        <div class="modal fade" id="@t.NameSysteam" tabindex="-1">
-                            <div class="modal-dialog modal-xl">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title">@t.NameSysteam</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                                    </div>
-                                    <div class="modal-body">
-
-                                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
-                                            <div class="row g-0">
-                                                <div class="col-md-2">
-                                                    @* @foreach(var d in t.ProductGalery)
-                                                {
-                                                <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
-                                                } *@
-                                                </div>
-                                                <div class="col-md-8">
-                                                    <div class="card-body">
-
-                                                        <div class="card-text" style="color:black">
-                                                            @Html.Raw(t.DesctiptionsSysteam)
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                     
                     }
                 </div>
             </div>
 
         </div>
+        <div class="modal fade" id="FooterItemRender" load tabindex="-1">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title" style="color:black" id="footer_item_title"></h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
+                            <div class="row g-0">
+                                <div class="col-md-2">
+                                    @* @foreach(var d in t.ProductGalery)
+                                    {
+                                    <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
+                                    } *@
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+
+                                        <div class="card-text" id="FooterItemRenderDescriptions" style="color:black">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <hr style="height: 3px;">
         <h2><a href="@Url.Action("Impressum", "Home")">Impressum</a></h2>
     </div>
 </div>
+<script>
+
+    let modalInfo = document.querySelector("#FooterItemRender");
+    let abusData = @Html.Raw(Json.Serialize(Model.ABUS));
+    let cesSystem = @Html.Raw(Json.Serialize(Model.SystemCes));
+    let Basi = @Html.Raw(Json.Serialize(Model.Basi));
+    let EVVA = @Html.Raw(Json.Serialize(Model.EVVA));
+
+
+    let title = document.getElementById("footer_item_title");
+    let discriptions = document.getElementById("FooterItemRenderDescriptions");
+   
+    function system_name(name) 
+    {
+        render(name);
+    }
+
+    function render(name) 
+    {
+        abusData["$values"].forEach((item) =>
+        {
+            if (item.nameSysteam == name) 
+            {
+                title.textContent = item.nameSysteam;
+                discriptions.innerHTML = item.desctiptionsSysteam;
+            }
+
+        });
+
+        cesSystem["$values"].forEach((item) => 
+        {
+            if (item.nameSysteam == name) 
+            {
+                title.textContent = item.nameSysteam;
+                discriptions.innerHTML = item.desctiptionsSysteam;
+            }
+            
+        });
+
+        Basi["$values"].forEach((item) => 
+        {
+            if (item.nameSysteam == name) {
+                title.textContent = item.nameSysteam;
+                discriptions.innerHTML = item.desctiptionsSysteam;
+            }
+        });
+
+        EVVA["$values"].forEach((item) => 
+        {
+            if (item.nameSysteam == name) 
+            {
+                title.textContent = item.nameSysteam;
+                discriptions.innerHTML = item.desctiptionsSysteam;
+            }
+        });
+    }
+    
+</script>
