--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -69,9 +69,9 @@
         @await Component.InvokeAsync("Footer")
     </div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js" ></script>
-    <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js" ></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
+    <script src="~/lib/jquery/dist/jquery.min.js" defer ></script>
+    <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js" defer></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
