--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
@@ -88,10 +88,10 @@
 <script>
 
     let modalInfo = document.querySelector("#FooterItemRender");
-    let abusData = @Html.Raw(Json.Serialize(Model.ABUS));
-    let cesSystem = @Html.Raw(Json.Serialize(Model.SystemCes));
-    let Basi = @Html.Raw(Json.Serialize(Model.Basi));
-    let EVVA = @Html.Raw(Json.Serialize(Model.EVVA));
+    // let abusData = @Html.Raw(Json.Serialize(Model.ABUS));
+    // let cesSystem = @Html.Raw(Json.Serialize(Model.SystemCes));
+    // let Basi = @Html.Raw(Json.Serialize(Model.Basi));
+    // let EVVA = @Html.Raw(Json.Serialize(Model.EVVA));
 
 
     let title = document.getElementById("footer_item_title");
