--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -71,12 +71,12 @@
                 <div class="row">
                     <div class="col-md-4 mt-2 p-2">
                         <img src="@Url.Content("~/compression/basi.webp")" alt="Basi" height="50" width="50" />
-                        <div style="margin-top:20px">
+                       <div style="margin-top:20px">
                             @foreach (var t in ViewBag.Basi)
                             {
-                            <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
-                            }
-                        </div>
+                                <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                            } 
+                        </div> 
                     </div>
                     <div class="col-md-4 mt-2 p-2">
                         <img src="@Url.Content("~/Image/logo_ces.svg")" alt="CES" height="50" width="50" />
@@ -84,34 +84,33 @@
                         <div style="margin-top:20px">
                             @foreach (var t in ViewBag.Ces)
                             {
-                            <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
-                            }    
-                        </div>
+                                <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                            }   
+                        </div> 
                     </div>
                     <div class="col-md-4 mt-2 p-2">
                         <img src="@Url.Content("~/compression/ABUS.svg.webp")" alt="ABUS" height="50" width="100" />
                         <div style="margin-top:20px">
-                            @foreach (var t in ViewBag.Abus)
+                             @foreach (var t in ViewBag.Abus)
                             {
-                            <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
-                            }   
+                            <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                            }  
                         </div>
                     </div>
 
                     <div class="col-md-4 mt-2 p-2">
                         <img src="@Url.Content("~/compression/EVVA.webp")" alt="EVVA" height="50" width="100" />
                         <div style="margin-top:20px">
-
                             @foreach (var t in ViewBag.Evva)
                             {
-                            <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
-                            } 
+                                <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                            }   
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="modal fade" id="FooterItemRender" load tabindex="-1">
+             <div class="modal fade" id="FooterItemRender" load tabindex="-1">
                 <div class="modal-dialog modal-xl">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -123,10 +122,10 @@
                             <div class="card shadow-lg mb-4 bg-body-tertiary rounded">
                                 <div class="row g-0">
                                     <div class="col-md-2">
-                                        @*  @foreach(var d in t.ProductGalery)
+                                       @*  @foreach(var d in t.ProductGalery)
                                         {
                                         <img class="img-fluid rounded-start" height="150" width="85" src="@("/compression/" + d.ImageName)" alt="@t.NameSysteam">
-                                        }  *@
+                                        }    *@
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -143,22 +142,17 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
             <hr style="height: 3px;">
             <h2><a href="@Url.Action("Impressum", "Home")">Impressum</a></h2>
         </div>
     </div>
 
     @await RenderSectionAsync("Scripts", required: false)
-    <script>
-        let abusData = @Html.Raw(Json.Serialize(ViewBag.Abus));
-        let cesSystem = @Html.Raw(Json.Serialize(ViewBag.Ces));
-        let Basi = @Html.Raw(Json.Serialize(ViewBag.Basi));
-        let EVVA = @Html.Raw(Json.Serialize(ViewBag.Evva));
-    </script>
-    <script src="~/Js/footer.js" async></script>
-    <script src="~/lib/jquery/dist/jquery.min.js" async></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" async></script>
-    <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js" async></script>
+
+    <script src="~/lib/jquery/dist/jquery.min.js" ></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
+    <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js"></script>
+    <script src="~/Js/footer.js" ></script>
 </body>
 </html>
