--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -16,6 +16,15 @@
                 canonicalLink.setAttribute('href', currentUrl);
             }
         });
+   
+            (function(c,l,a,r,i,t,y) {
+                w[c] = w[c] || function () { (w[c].q = w[c].q || []).push(arguments) };
+            w[c].l=1*new Date();
+            i=l.createElement(a);
+            r=l.getElementsByTagName(a)[0];
+            i.async=1;i.src=y;r.parentNode.insertBefore(i,r);
+        })(window, "clarity", "script", "https://www.clarity.ms/tag/o97kp4ebde");
+
     </script>
     <link rel="canonical" href="" />
     <meta name="google-site-verification" content="IsNOTjO6GlJpiCjeAVXfTj7CGOcsjaJkC13Tp5q0GQQ" />
